# MolALKit

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
molalkit/active_learning/: forgetter.py  learner.py  selector.py  utils.py
molalkit/data/: graphgps.py  utils.py
molalkit/exe/: args.py  logging.py  run.py  utils.py
molalkit/models/: base.py  utils.py
molalkit/models/adaboost/: AdaBoostClassifier.py  AdaBoostRegressor.py
molalkit/models/configs/: 2Mol_RandomForest_Morgan_concat_Config  AdaBoost_Morgan_Config  AdaBoost_RDKitNorm_Config  AdaBoost_RDKitNorm_Morgan_Config  BernoulliNB_Morgan_Config  BernoulliNB_RDKitNorm_Config  DMPNN+MorganCount_BinaryClassification_Config  DMPNN+MorganCount_RegressionDropout_Config  DMPNN+Morgan_BinaryClassification_Config  DMPNN+Morgan_Regression_Config  DMPNN+RDKitNorm_BinaryClassification_Config  DMPNN+RDKitNorm_RegressionDropout_Config  DMPNN+RDKitNorm_Regression_Config  DMPNN_BinaryClassificationDropout_Config  DMPNN_BinaryClassificationEnsemble_Config  DMPNN_BinaryClassification_CBP_Config  DMPNN_BinaryClassification_Config  DMPNN_RegressionDropout_Config  DMPNN_RegressionEnsemble_Config  DMPNN_RegressionEvidentialAleatoric_Config  DMPNN_RegressionEvidentialEpistemic_Config  DMPNN_RegressionEvidential_Config  DMPNN_RegressionMVE_Config  DMPNN_Regression_CBP_Config  DMPNN_Regression_Config  DeepForest_Morgan_Config  DeepForest_RDKitNorm_Config  DeepForest_RDKitNorm_Morgan_Config  GRU_SELFIES_Config  GRU_SMILES_Config  GaussianNB_Morgan_Config  GaussianNB_RDKitNorm_Config  GaussianProcessClassification_DotProductKernelMorgan_Config  GaussianProcessClassification_RBFKernelRDKitNorm_Config  GaussianProcessRegressionDecisionBoundaryUncertainty_DotProductKernelMorgan_Config  GaussianProcessRegressionDecisionBoundaryUncertainty_RBFKernelRDKitNorm_Config  GaussianProcessRegressionPosteriorUncertainty_DotProductKernelMorgan_Config  GaussianProcessRegressionPosteriorUncertainty_RBFKernelRDKitNorm_Config  GraphGPS_BinaryClassification_Config  GraphGPS_Regression_Config  (+34 more)
molalkit/models/deep_forest/: DeepForestClassifier.py  __init__.py
molalkit/models/dt/: dt.py
molalkit/models/extra_trees/: extra_trees.py
molalkit/models/gaussian_process/: GaussianProcessClassifier.py  GaussianProcessRegressor.py
molalkit/models/gradient_boosting/: gradient_boosting.py
molalkit/models/graphgps/: GPS_classification.yaml  GPS_regression.yaml  graphgps.py
molalkit/models/logistic_regression/: LogisticRegression.py
molalkit/models/mpnn/: mpnn.py
tests/: README.md  conftest.py  test_learning.py  test_model.py
tests/e2e/: __init__.py  test_full_pipeline.py
tests/integration/: __init__.py  test_active_learner.py  test_checkpoint.py
tests/unit/: __init__.py  test_forgetters.py  test_models.py  test_selectors.py  test_utils.py
(+11 files in other folders)
