[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molalkit"
description = "MolALKit: A Toolkit for Active Learning in Molecular Data."
version = "1.0.1"
authors = [
    {name = "Yan Xiang", email="yan.xiang@duke.edu"}
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "active machine learning",
    "molecular property prediction",
    "drug discovery"
]
requires-python = ">=3.9"
dependencies = [
    "mgktools==3.3.0",
    "selfies",
    "xgboost"
]

[project.urls]
source = "https://github.com/xiangyan93/molalkit"
PyPi = "https://pypi.org/project/molalkit"

[project.scripts]
molalkit_run = "molalkit.exe.run:molalkit_run"

[tool.setuptools.package-data]
"*" = ["data/datasets/*.csv", "models/configs/*Config"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests (no ML model training)",
    "integration: Integration tests (may train small models)",
    "e2e: End-to-end tests (full pipeline, slow)",
    "slow: Tests that take a long time to run",
]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
